--- a/_/components/sass/_variables.scss
+++ b/_/components/sass/_variables.scss
@@ -1,6 +1,3 @@
-$lightgreen : #819090;
-$baseRed: #991F1F;
-$opac_black: rgba(0,0,0,0.8);
-$wall: url(../images/bk_body.png);
+$baseColor: #117;
 $font-serif: Georgia, "Chaparral Pro", "Times New Roman", Times, serif;
 $font-sans: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
