--- a/_/components/sass/_variables.scss
+++ b/_/components/sass/_variables.scss
@@ -1,3 +1,4 @@
+$opac_black: rgba(0,0,0,0.8);
 $baseColor: #117;
 $font-serif: Georgia, "Chaparral Pro", "Times New Roman", Times, serif;
 $font-sans: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
