--- a/_/css/style.css
+++ b/_/css/style.css
@@ -1,6 +1,6 @@
 @import url("http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic");
 @import url("http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css");
-/* line 17, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 17, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -21,69 +21,121 @@ time, mark, audio, video {
   font-size: 100%;
   vertical-align: baseline; }
 
-/* line 22, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 22, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html {
   line-height: 1; }
 
-/* line 24, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 24, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none; }
 
-/* line 26, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 26, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0; }
 
-/* line 28, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 28, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle; }
 
-/* line 30, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 30, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none; }
-  /* line 103, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+  /* line 103, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
   q:before, q:after, blockquote:before, blockquote:after {
     content: "";
     content: none; }
 
-/* line 32, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 32, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none; }
 
-/* line 116, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 116, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
   display: block; }
 
 /* line 4, ../components/sass/_base.scss */
-a {
-  color: #117;
-  text-decoration: none; }
+body {
+  color: #121e41;
+  font-weight: 700;
+  margin: 0;
+  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 1.4rem; }
 
 /* line 12, ../components/sass/_base.scss */
-body {
-  background: #000;
-  color: #fff;
-  margin: 0 0 0 24pt;
-  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 20pt; }
-
-/* line 20, ../components/sass/_base.scss */
 h1, h2, h3, h4, h5, h6 {
   font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif; }
 
 /* Link Styling */
-/* line 26, ../components/sass/_base.scss */
+/* line 18, ../components/sass/_base.scss */
 a:link {
   text-decoration: none;
   color: #111177; }
-/* line 30, ../components/sass/_base.scss */
+/* line 22, ../components/sass/_base.scss */
 a:hover, a:active {
   text-decoration: underline; }
-/* line 33, ../components/sass/_base.scss */
+/* line 25, ../components/sass/_base.scss */
 a:focus {
   outline: none; }
-/* line 36, ../components/sass/_base.scss */
+/* line 28, ../components/sass/_base.scss */
 a:visited {
   color: #1f1f69; }
+
+/* line 1, ../components/sass/_layout.scss */
+#main {
+  position: absolute;
+  top: 0;
+  margin: 0 0 0 24pt; }
+
+/* line 8, ../components/sass/_layout.scss */
+.hero #subway {
+  width: 100%;
+  height: 5000px;
+  display: inline-block;
+  vertical-align: top;
+  font: 0/0 serif;
+  text-shadow: none;
+  color: transparent;
+  background-size: 100%;
+  background-position: 50% 50%;
+  background-repeat: repeat-y; }
+
+/* line 20, ../components/sass/_layout.scss */
+.hero #subway .inner {
+  padding-top: 63.35%;
+  /* height/width of image */
+  display: block;
+  height: 0; }
+
+/* default screen, non-retina */
+/* line 27, ../components/sass/_layout.scss */
+.hero #subway {
+  background-image: url("../images/subway_1940.jpg"); }
+
+@media only screen and (max-width: 320px) {
+  /* Small screen, non-retina */
+  /* line 31, ../components/sass/_layout.scss */
+  .hero #cafe {
+    background-image: url("../img/subway_320.jpg"); } }
+@media only screen and (min-resolution: 2dppx) and (max-width: 320px) {
+  /* Small screen, retina */
+  /* line 36, ../components/sass/_layout.scss */
+  .hero #cafe {
+    background-image: url("../img/subway_320.jpg"); } }
+@media only screen and (min-width: 321px) and (max-width: 538px) {
+  /* Medium screen, non-retina */
+  /* line 40, ../components/sass/_layout.scss */
+  .hero #cafe {
+    background-image: url("../img/subway_538.jpg"); } }
+@media only screen and (min-resolution: 2dppx) and (min-width: 321px) and (max-width: 538px) {
+  /* Medium screen, retina */
+  /* line 45, ../components/sass/_layout.scss */
+  .hero #cafe {
+    background-image: url("../img/subway_538.jpg"); } }
+@media only screen and (min-resolution: 2dppx) and (min-width: 539px) {
+  /* Large screen, retina */
+  /* line 50, ../components/sass/_layout.scss */
+  .hero #cafe {
+    background-image: url("../img/subway_538.jpg"); } }
