--- a/_/components/sass/_layout.scss
+++ b/_/components/sass/_layout.scss
@@ -1,13 +1,70 @@
+header {
+    background-color: $opac_black;
+    width: 100%;
+    height: 20px;
+    padding: 10px;
+    color: #FFF;
+}
+
+#title {
+   
+}
+
+#intro {
+    text-align: center;
+    width: 100%;
+    height: 900px;
+}
+
+video {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -100;
+    background-size: cover;
+}
+
+.overlay {
+  width: 400px;
+  height: 400px;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  background: $opac_black;
+  display: block;
+  position: absolute;
+  top: 20%;
+  left: 33%;
+}
+
+.overlay p {
+  text-align: center;
+  width: 80%;
+  margin: 0 auto;
+  color: #fff;
+  font-family: inherit;
+  margin-bottom: 20px;
+}
+
+#expo {
+    height: 450px;
+    background: $blue;
+}
+
+#poem {
+    height: 450px;
+}
+
 #main {
-    position: absolute;
-    top: 0;
-    margin: 0 0 0 24pt;
-    // background-color: $opac_black;
+    margin-top: -600px;
 }
 
 .hero #subway {
     width: 100%;
-    height: 5000px;
     display: inline-block;
     vertical-align: top;
     font: 0/0 serif;
@@ -30,26 +87,3 @@
     /* Small screen, non-retina */
     .hero #cafe { background-image: url("../img/subway_320.jpg"); }
 }
-@media
-only screen and (min-resolution: 2dppx) and (max-width: 320px) {
-    /* Small screen, retina */
-    .hero #cafe { background-image: url("../img/subway_320.jpg"); }
-}
-@media only screen and (min-width: 321px) and (max-width: 538px) {
-    /* Medium screen, non-retina */
-    .hero #cafe { background-image: url("../img/subway_538.jpg"); }
-}
-@media
-only screen and (min-resolution: 2dppx) and (min-width: 321px) and (max-width: 538px) {
-    /* Medium screen, retina */
-    .hero #cafe { background-image: url("../img/subway_538.jpg"); }
-}
-@media
-only screen and (min-resolution: 2dppx) and (min-width: 539px) {
-    /* Large screen, retina */
-    .hero #cafe { background-image: url("../img/subway_538.jpg"); }
-}
-
-
-
-
