--- a/_/css/style.css
+++ b/_/css/style.css
@@ -62,41 +62,118 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 
 /* line 9, ../components/sass/_base.scss */
 body {
-  color: #121e41;
-  font-weight: 700;
+  color: #111177;
   margin: 0;
   font-family: "Collator", "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 1.4rem; }
+  font-size: 100%; }
 
-/* line 17, ../components/sass/_base.scss */
-h1, h2, h3, h4, h5, h6 {
-  font-family: "Collator", "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif; }
+/* line 16, ../components/sass/_base.scss */
+#title {
+  text-align: center;
+  margin-top: 2.5em;
+  font-size: 3em; }
+
+/* line 22, ../components/sass/_base.scss */
+p#auto_text {
+  text-transform: uppercase; }
+
+/* line 26, ../components/sass/_base.scss */
+#main {
+  font-size: 1.5em;
+  font-weight: 700; }
+
+/* line 31, ../components/sass/_base.scss */
+#main ul {
+  font-size: 0.5em; }
+
+/* line 35, ../components/sass/_base.scss */
+#main ul li {
+  display: inline;
+  padding-right: 5px; }
+
+/* line 42, ../components/sass/_base.scss */
+.pointer {
+  cursor: pointer; }
 
 /* Link Styling */
-/* line 23, ../components/sass/_base.scss */
+/* line 48, ../components/sass/_base.scss */
 a:link {
   text-decoration: none;
   color: #111177; }
-/* line 27, ../components/sass/_base.scss */
+/* line 52, ../components/sass/_base.scss */
 a:hover, a:active {
   text-decoration: underline; }
-/* line 30, ../components/sass/_base.scss */
+/* line 55, ../components/sass/_base.scss */
 a:focus {
   outline: none; }
-/* line 33, ../components/sass/_base.scss */
+/* line 58, ../components/sass/_base.scss */
 a:visited {
   color: #1f1f69; }
 
 /* line 1, ../components/sass/_layout.scss */
-#main {
-  position: absolute;
-  top: 0;
-  margin: 0 0 0 24pt; }
+header {
+  background-color: rgba(0, 0, 0, 0.3);
+  width: 100%;
+  height: 20px;
+  padding: 10px;
+  color: #FFF; }
 
-/* line 8, ../components/sass/_layout.scss */
+/* line 13, ../components/sass/_layout.scss */
+#intro {
+  text-align: center;
+  width: 100%;
+  height: 900px; }
+
+/* line 19, ../components/sass/_layout.scss */
+video {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  z-index: -100;
+  background-size: cover; }
+
+/* line 31, ../components/sass/_layout.scss */
+.overlay {
+  width: 400px;
+  height: 400px;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  background: rgba(0, 0, 0, 0.3);
+  display: block;
+  position: absolute;
+  top: 20%;
+  left: 33%; }
+
+/* line 44, ../components/sass/_layout.scss */
+.overlay p {
+  text-align: center;
+  width: 80%;
+  margin: 0 auto;
+  color: #fff;
+  font-family: inherit;
+  margin-bottom: 20px; }
+
+/* line 53, ../components/sass/_layout.scss */
+#expo {
+  height: 450px;
+  background: #111177; }
+
+/* line 58, ../components/sass/_layout.scss */
+#poem {
+  height: 450px; }
+
+/* line 62, ../components/sass/_layout.scss */
+#main {
+  margin-top: -600px; }
+
+/* line 66, ../components/sass/_layout.scss */
 .hero #subway {
   width: 100%;
-  height: 5000px;
   display: inline-block;
   vertical-align: top;
   font: 0/0 serif;
@@ -106,7 +183,7 @@ a:visited {
   background-position: 50% 50%;
   background-repeat: repeat-y; }
 
-/* line 20, ../components/sass/_layout.scss */
+/* line 77, ../components/sass/_layout.scss */
 .hero #subway .inner {
   padding-top: 63.35%;
   /* height/width of image */
@@ -114,32 +191,12 @@ a:visited {
   height: 0; }
 
 /* default screen, non-retina */
-/* line 27, ../components/sass/_layout.scss */
+/* line 84, ../components/sass/_layout.scss */
 .hero #subway {
   background-image: url("../images/subway_1940.jpg"); }
 
 @media only screen and (max-width: 320px) {
   /* Small screen, non-retina */
-  /* line 31, ../components/sass/_layout.scss */
+  /* line 88, ../components/sass/_layout.scss */
   .hero #cafe {
     background-image: url("../img/subway_320.jpg"); } }
-@media only screen and (min-resolution: 2dppx) and (max-width: 320px) {
-  /* Small screen, retina */
-  /* line 36, ../components/sass/_layout.scss */
-  .hero #cafe {
-    background-image: url("../img/subway_320.jpg"); } }
-@media only screen and (min-width: 321px) and (max-width: 538px) {
-  /* Medium screen, non-retina */
-  /* line 40, ../components/sass/_layout.scss */
-  .hero #cafe {
-    background-image: url("../img/subway_538.jpg"); } }
-@media only screen and (min-resolution: 2dppx) and (min-width: 321px) and (max-width: 538px) {
-  /* Medium screen, retina */
-  /* line 45, ../components/sass/_layout.scss */
-  .hero #cafe {
-    background-image: url("../img/subway_538.jpg"); } }
-@media only screen and (min-resolution: 2dppx) and (min-width: 539px) {
-  /* Large screen, retina */
-  /* line 50, ../components/sass/_layout.scss */
-  .hero #cafe {
-    background-image: url("../img/subway_538.jpg"); } }
