--- a/_/components/sass/_base.scss
+++ b/_/components/sass/_base.scss
@@ -15,8 +15,8 @@ body {
 
 #title {
 	text-align: center;
-	margin-top: 2.5em;
-	font-size: 3em;
+	margin-top: 2.8em;
+	font-size: 2em;
 }
 
 p#auto_text {
@@ -28,16 +28,16 @@ p#auto_text {
 	font-weight: 700;
 }
 
-#main ul {
-	font-size: 0.5em;
+.controls ul {
+	font-size: 0.95em;
+	margin: 0 0 0 50px;
 }
 
-#main ul li {
+.controls ul li {
 	display: inline;
-	padding-right: 5px;
+	padding-right: 20px;
+	padding-top: 50px;
 }
-
-
 
 .pointer {
 	cursor: pointer;
@@ -47,7 +47,7 @@ p#auto_text {
 a {
 	&:link {
 		text-decoration: none;
-		color: $blue;
+		color: #FFF;
 	}
 	&:hover, &:active {
 		text-decoration:underline;
@@ -56,6 +56,6 @@ a {
 		outline: none;
 	}
 	&:visited {
-		color: desaturate($blue, 20%);
+		color: desaturate(#FFF, 20%);
 	}
 }
