--- a/_/components/sass/_variables.scss
+++ b/_/components/sass/_variables.scss
@@ -1,5 +1,6 @@
 // Media Queries
-$break_small: 320px;
+$break_tiny: 400px;
+$break_small: 645px;
 $break_medium: 768px;
 $break_large: 970px; // poem lines begin to break, expo text covered up.
 $break_giant: 1281px; // need a bigger background image beyond 1280
