--- a/_/components/sass/_layout.scss
+++ b/_/components/sass/_layout.scss
@@ -146,6 +146,7 @@ video {
     width: auto;
     height: auto;
     z-index: -100;
+    background: url(_/videos/tokyo_subway.png) no-repeat;
     background-size: cover;
 }
 
