--- a/_/css/style.css
+++ b/_/css/style.css
@@ -114,6 +114,10 @@ a:visited {
 
 @media screen and (max-width: 630px) {
   /* line 6, ../components/sass/_layout.scss */
+  span.dash-bottom {
+    height: 640px; }
+
+  /* line 9, ../components/sass/_layout.scss */
   #expo {
     padding: 40px 30px 65px 20px;
     margin-right: -10px;
@@ -121,103 +125,123 @@ a:visited {
     height: 515px;
     min-width: 320px; }
 
-  /* line 13, ../components/sass/_layout.scss */
+  /* line 16, ../components/sass/_layout.scss */
   #expo article {
     width: 300px; }
 
-  /* line 16, ../components/sass/_layout.scss */
+  /* line 19, ../components/sass/_layout.scss */
   #poem {
     height: 900px;
     min-width: 320px;
     background-image: url("../images/subway_630x900.jpg"); }
 
-  /* line 21, ../components/sass/_layout.scss */
+  /* line 24, ../components/sass/_layout.scss */
   #poem div {
     font-size: 60%;
     line-height: 130%; }
 
-  /* line 25, ../components/sass/_layout.scss */
+  /* line 28, ../components/sass/_layout.scss */
   footer {
     font-size: 0.95em;
     min-width: 400px; } }
 @media screen and (min-width: 631px) and (max-width: 647px) {
-  /* line 34, ../components/sass/_layout.scss */
+  /* line 37, ../components/sass/_layout.scss */
+  span.dash-bottom {
+    height: 640px; }
+
+  /* line 40, ../components/sass/_layout.scss */
   #expo {
     padding: 40px 10% 65px 10%;
     font-size: 1em;
     height: 335px; }
 
-  /* line 39, ../components/sass/_layout.scss */
+  /* line 45, ../components/sass/_layout.scss */
   #expo article {
     width: 650px; }
 
-  /* line 42, ../components/sass/_layout.scss */
+  /* line 48, ../components/sass/_layout.scss */
   #poem {
     height: 680px;
     background-image: url("../images/subway_645x680.jpg"); }
 
-  /* line 46, ../components/sass/_layout.scss */
+  /* line 52, ../components/sass/_layout.scss */
   #poem div {
     font-size: 65%;
     line-height: 130%; } }
 @media screen and (min-width: 648px) and (max-width: 768px) {
-  /* line 55, ../components/sass/_layout.scss */
+  /* line 61, ../components/sass/_layout.scss */
+  span.dash-bottom {
+    height: 610px; }
+
+  /* line 64, ../components/sass/_layout.scss */
   #expo {
     padding: 40px 10% 65px 10%;
     height: 335px; }
 
-  /* line 59, ../components/sass/_layout.scss */
+  /* line 68, ../components/sass/_layout.scss */
   #poem {
     height: 680px;
     background-image: url("../images/subway_1280x680.jpg"); }
 
-  /* line 63, ../components/sass/_layout.scss */
+  /* line 72, ../components/sass/_layout.scss */
   #poem div {
     font-size: 65%;
     line-height: 130%; } }
 @media screen and (min-width: 769px) and (max-width: 970px) {
-  /* line 72, ../components/sass/_layout.scss */
+  /* line 81, ../components/sass/_layout.scss */
+  span.dash-bottom {
+    height: 610px; }
+
+  /* line 84, ../components/sass/_layout.scss */
   #expo {
     padding: 40px 10% 65px 10%;
     height: 335px; }
 
-  /* line 77, ../components/sass/_layout.scss */
+  /* line 89, ../components/sass/_layout.scss */
   #poem {
     height: 680px;
     background-image: url("../images/subway_970x680.jpg"); }
 
-  /* line 81, ../components/sass/_layout.scss */
+  /* line 93, ../components/sass/_layout.scss */
   #poem div {
     font-size: 80%; } }
 @media screen and (min-width: 971px) and (max-width: 1280px) {
-  /* line 90, ../components/sass/_layout.scss */
+  /* line 102, ../components/sass/_layout.scss */
+  span.dash-bottom {
+    height: 610px; }
+
+  /* line 105, ../components/sass/_layout.scss */
   #expo {
     padding: 40px 25% 65px 25%;
     height: 330px; }
 
-  /* line 94, ../components/sass/_layout.scss */
+  /* line 109, ../components/sass/_layout.scss */
   #poem {
     height: 680px;
     background-image: url("../images/subway_1280x680.jpg"); }
 
-  /* line 98, ../components/sass/_layout.scss */
+  /* line 113, ../components/sass/_layout.scss */
   #poem div {
     font-size: 100%; } }
 @media screen and (min-width: 1281px) {
-  /* line 107, ../components/sass/_layout.scss */
+  /* line 122, ../components/sass/_layout.scss */
+  span.dash-bottom {
+    height: 610px; }
+
+  /* line 125, ../components/sass/_layout.scss */
   #expo {
     padding: 40px 25% 65px 25%;
     height: 295px; }
 
-  /* line 111, ../components/sass/_layout.scss */
+  /* line 129, ../components/sass/_layout.scss */
   #poem {
     height: 680px;
     background-image: url("../images/subway_1680x680.jpg"); }
 
-  /* line 115, ../components/sass/_layout.scss */
+  /* line 133, ../components/sass/_layout.scss */
   #poem div {
     font-size: 100%; } }
-/* line 122, ../components/sass/_layout.scss */
+/* line 139, ../components/sass/_layout.scss */
 header {
   background-color: rgba(0, 0, 0, 0.3);
   width: auto;
@@ -225,13 +249,13 @@ header {
   padding: 10px;
   color: #FFF; }
 
-/* line 134, ../components/sass/_layout.scss */
+/* line 151, ../components/sass/_layout.scss */
 #intro {
   text-align: center;
   width: 100%;
   height: 900px; }
 
-/* line 140, ../components/sass/_layout.scss */
+/* line 157, ../components/sass/_layout.scss */
 video {
   position: fixed;
   right: 0;
@@ -241,10 +265,15 @@ video {
   width: auto;
   height: auto;
   z-index: -100;
-  background: url(_/videos/tokyo_subway.png) no-repeat;
+  background: url("../videos/tokyo_subway.png") no-repeat;
   background-size: cover; }
 
-/* line 153, ../components/sass/_layout.scss */
+/* line 170, ../components/sass/_layout.scss */
+#mobile_image {
+  background-image: url("../videos/tokyo_subway_900.png");
+  height: 100%; }
+
+/* line 175, ../components/sass/_layout.scss */
 .overlay {
   width: 300px;
   height: 300px;
@@ -257,7 +286,7 @@ video {
   top: 20%;
   left: 33%; }
 
-/* line 166, ../components/sass/_layout.scss */
+/* line 188, ../components/sass/_layout.scss */
 .overlay p {
   text-align: center;
   width: 80%;
@@ -266,9 +295,8 @@ video {
   font-family: inherit;
   margin-bottom: 10px; }
 
-/* line 175, ../components/sass/_layout.scss */
+/* line 197, ../components/sass/_layout.scss */
 span.dash-bottom {
-  height: 610px;
   width: 4px;
   border-right: 4px dashed #fdfdfe;
   display: block;
@@ -277,16 +305,16 @@ span.dash-bottom {
   left: 50%;
   margin-left: -2px; }
 
-/* line 186, ../components/sass/_layout.scss */
+/* line 207, ../components/sass/_layout.scss */
 #expo {
   line-height: 150%;
   background: #bdce64; }
 
-/* line 191, ../components/sass/_layout.scss */
+/* line 212, ../components/sass/_layout.scss */
 #expo p {
   padding-bottom: 1.25em; }
 
-/* line 195, ../components/sass/_layout.scss */
+/* line 216, ../components/sass/_layout.scss */
 .controls {
   background-color: #111177;
   width: auto;
@@ -294,11 +322,11 @@ span.dash-bottom {
   padding: 15px 0 0 0;
   color: #FFF; }
 
-/* line 203, ../components/sass/_layout.scss */
+/* line 224, ../components/sass/_layout.scss */
 #main {
   padding-left: 50px; }
 
-/* line 207, ../components/sass/_layout.scss */
+/* line 228, ../components/sass/_layout.scss */
 .hero #subway {
   width: 100%;
   background-repeat: no-repeat; }
